outputs/logs/auto_preprocessor_20250930_223243.log
2025-09-30 22:32:43,644 - werkzeug - WARNING -  * Debugger is active!
2025-09-30 22:32:43,644 - werkzeug - INFO -  * Debugger PIN: 720-559-916
2025-09-30 22:32:53,293 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:32:53] "[32mPOST /upload HTTP/1.1[0m" 302 -
2025-09-30 22:32:53,305 - auto_preprocessor.data_analyzer - INFO - Loading dataset from /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/raw/cleaned_titanic.csv
2025-09-30 22:32:53,313 - auto_preprocessor.data_analyzer - INFO - Dataset loaded successfully: 891 rows, 12 columns
2025-09-30 22:32:53,315 - auto_preprocessor.data_analyzer - INFO - Using random sampling
2025-09-30 22:32:53,320 - auto_preprocessor.data_analyzer - INFO - Saved dataset sample to /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/samples/sample_cleaned_titanic.csv
2025-09-30 22:32:53,321 - auto_preprocessor.data_analyzer - INFO - Computing dataset statistics
2025-09-30 22:32:53,358 - auto_preprocessor.data_analyzer - INFO - Saved statistics to /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/processed/stats_cleaned_titanic.json
2025-09-30 22:32:53,362 - auto_preprocessor.data_analyzer - INFO - Requesting LLM analysis of dataset
2025-09-30 22:32:53,363 - auto_preprocessor.llm_client - INFO - Using cached LLM response
2025-09-30 22:32:53,363 - auto_preprocessor.data_analyzer - INFO - Saved LLM analysis report to /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/outputs/reports/analysis_cleaned_titanic_20250930_223253.json
2025-09-30 22:32:53,363 - auto_preprocessor.data_analyzer - INFO - Loading dataset from /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/raw/cleaned_titanic.csv
2025-09-30 22:32:53,365 - auto_preprocessor.data_analyzer - INFO - Dataset loaded successfully: 891 rows, 12 columns
2025-09-30 22:32:53,388 - auto_preprocessor - ERROR - Error during analysis: Encountered unknown tag 'endif'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
Traceback (most recent call last):
  File "/home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/app.py", line 132, in analyze_dataset
    return render_template('column_actions.html',
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/templates/column_actions.html", line 225, in template
    {% endif %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endif'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
2025-09-30 22:32:53,389 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:32:53] "[32mGET /analyze HTTP/1.1[0m" 302 -
2025-09-30 22:32:53,401 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:32:53] "GET / HTTP/1.1" 200 -
2025-09-30 22:32:57,029 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:32:57] "GET / HTTP/1.1" 200 -
2025-09-30 22:32:57,868 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:32:57] "GET / HTTP/1.1" 200 -
2025-09-30 22:32:58,137 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:32:58] "GET / HTTP/1.1" 200 -
2025-09-30 22:32:58,326 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:32:58] "GET / HTTP/1.1" 200 -
2025-09-30 22:33:05,465 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:33:05] "[32mPOST /upload HTTP/1.1[0m" 302 -
2025-09-30 22:33:05,474 - auto_preprocessor.data_analyzer - INFO - Loading dataset from /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/raw/cleaned_titanic.csv
2025-09-30 22:33:05,485 - auto_preprocessor.data_analyzer - INFO - Dataset loaded successfully: 891 rows, 12 columns
2025-09-30 22:33:05,486 - auto_preprocessor.data_analyzer - INFO - Using random sampling
2025-09-30 22:33:05,489 - auto_preprocessor.data_analyzer - INFO - Saved dataset sample to /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/samples/sample_cleaned_titanic.csv
2025-09-30 22:33:05,490 - auto_preprocessor.data_analyzer - INFO - Computing dataset statistics
2025-09-30 22:33:05,525 - auto_preprocessor.data_analyzer - INFO - Saved statistics to /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/processed/stats_cleaned_titanic.json
2025-09-30 22:33:05,529 - auto_preprocessor.data_analyzer - INFO - Requesting LLM analysis of dataset
2025-09-30 22:33:05,529 - auto_preprocessor.llm_client - INFO - Using cached LLM response
2025-09-30 22:33:05,529 - auto_preprocessor.data_analyzer - INFO - Saved LLM analysis report to /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/outputs/reports/analysis_cleaned_titanic_20250930_223305.json
2025-09-30 22:33:05,530 - auto_preprocessor.data_analyzer - INFO - Loading dataset from /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/raw/cleaned_titanic.csv
2025-09-30 22:33:05,532 - auto_preprocessor.data_analyzer - INFO - Dataset loaded successfully: 891 rows, 12 columns
2025-09-30 22:33:05,553 - auto_preprocessor - ERROR - Error during analysis: Encountered unknown tag 'endif'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
Traceback (most recent call last):
  File "/home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/app.py", line 132, in analyze_dataset
    return render_template('column_actions.html',
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/templates/column_actions.html", line 225, in template
    {% endif %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endif'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
2025-09-30 22:33:05,554 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:33:05] "[32mGET /analyze HTTP/1.1[0m" 302 -
2025-09-30 22:33:05,559 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:33:05] "GET / HTTP/1.1" 200 -
